cambios de imagenes

--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -28,8 +28,8 @@
 						  <li class="nav-item dropdown">
 							  <a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								  <li><a class="dropdown-item" href="../paginas/historia.html #antes">Antes del Pop-Up</a></li>
-								  <li><a class="dropdown-item" href="../paginas/historia.html #despues">Después del Pop-Up</a></li>
+								  <li><a class="dropdown-item" href="../paginas/historia.html#antes">Antes del Pop-Up</a></li>
+								  <li><a class="dropdown-item" href="../paginas/historia.html#despues">Después del Pop-Up</a></li>
 								 </ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="../paginas/ingenieria.html">ingeniería</a></li>
@@ -54,10 +54,10 @@
 		<div class="row justify-content-center  animaFin">
 			 <div class="col-12 col-xl-3">
 					<div class="cajaImgHistoria">
-					<img src="../imagenes/antes1.PNG" class="imgHistoria">
-					<img src="../imagenes/antes2.PNG" class="imgHistoria">
-					<img src="../imagenes/libro2.JPG" class="imgHistoria">
-					<img src="../imagenes/libro1.JPG" class="imgHistoria">
+					<img src="../imagenes/antes1.jpg" class="imgHistoria">
+					<img src="../imagenes/antes2.jpg" class="imgHistoria">
+					<img src="../imagenes/libro2.jpg" class="imgHistoria">
+					<img src="../imagenes/libro1.jpg" class="imgHistoria">
 					</div>
 			</div>
 
@@ -134,10 +134,10 @@
 					
 						<div class="col-12 col-xl-3">
 						 	<div class="cajaImgHistoria">
-								<img src="../imagenes/nene.JPG" class="imgHistoria">
-								<img src="../imagenes/despues1.PNG" class="imgHistoria">
-								<img src="../imagenes/despues2.PNG" class="imgHistoria">
-								<img src="../imagenes/tiptop.JPG" class="imgHistoria">
+								<img src="../imagenes/nene.jpg" class="imgHistoria">
+								<img src="../imagenes/despues1.jpg" class="imgHistoria">
+								<img src="../imagenes/despues2.jpg" class="imgHistoria">
+								<img src="../imagenes/tiptop.jpg" class="imgHistoria">
 							</div>
 						</div>
 					</div>
