--- a/paginas/ingenieria.html
+++ b/paginas/ingenieria.html
@@ -28,8 +28,8 @@
 						  <li class="nav-item dropdown">
 							  <a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								  <li><a class="dropdown-item" href="../paginas/historia.html #antes">Antes del Pop-Up</a></li>
-								  <li><a class="dropdown-item" href="../paginas/historia.html #despuesS">Después del Pop-Up</a></li>
+								  <li><a class="dropdown-item" href="../paginas/historia.html#antes">Antes del Pop-Up</a></li>
+								  <li><a class="dropdown-item" href="../paginas/historia.html#despuesS">Después del Pop-Up</a></li>
 								 </ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="../paginas/ingenieria.html">ingeniería</a></li>
@@ -79,7 +79,7 @@
 				</div>
 					<div class="col-12 col-xl-3">
 						<div class="cajaImgHistoria">
-							<img src="../imagenes/ingeniera-papel-Silvia Coullaut.jpg" class="imgHistoria" alt="ingeniera en papel Silvia Coullaut" title="Silvia Coullaut">
+							<img src="../imagenes/ingeniera-papel-Silvia-Coullaut.jpg" class="imgHistoria" alt="ingeniera en papel Silvia Coullaut" title="Silvia Coullaut">
 							<img src="../imagenes/ingeniero-papel-Perter-Dahmen.jpg" class="imgHistoria" alt="ingeniero en papel Peter Dahmen" title="Peter Dahmen">
 							 <img src="../imagenes/ingeniero-papel-Robert-Sabuda.jpg" class="imgHistoria" alt="ingeniero en papel Robert Sabuda" title="Robert Sabuda">
 							 <img src="../imagenes/ingeniero-papel-Philippe-UG.jpg" class="imgHistoria" alt="ingeniero en papel Philippe UG" title="Philippe UG">
