--- a/paginas/que-es.html
+++ b/paginas/que-es.html
@@ -26,8 +26,8 @@
 							<li class="nav-item dropdown">
 							  	<a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
 									<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								  		<li><a class="dropdown-item" href="../paginas/historia.html #antes">Antes del Pop-Up</a></li>
-								  		<li><a class="dropdown-item" href="../paginas/historia.html #despues">Después del Pop-Up</a></li>
+								  		<li><a class="dropdown-item" href="../paginas/historia.html#antes">Antes del Pop-Up</a></li>
+								  		<li><a class="dropdown-item" href="../paginas/historia.html#despues">Después del Pop-Up</a></li>
 									 </ul>
 							</li>
 						<li class="nav-item"><a class="nav-link" href="../paginas/ingenieria.html">ingeniería</a></li>
@@ -38,7 +38,6 @@
 			</div>
 		</nav>
 	</header>
-
 
 
 	<div class="container">
@@ -52,7 +51,7 @@
 			</div>
 		
 			<div class="row justify-content-center">
-				<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
+				<div class=" col col-sm-12 col-md-10 col-xl-8 caja--InUp">
                     <div class="texto1">
                         <p>Es difícil hallar una definición sobre los libros pop-up (Trebbi, 2012), 
                             aunque sin temor alguno, Fanuel Hanan Díaz (2016:69) sostuvo que se caracterizan 
@@ -60,7 +59,7 @@
                             son realmente escuetas para definirlos. Estos ejemplares son mucho más que sus sistemas articulados, 
                             tienen la singularidad que al abrirse emergen de sus carillas distintos elementos. <br><br>
 
-								<img src="../imagenes/libro4.JPG" class="cajaImg animaPulse">
+								<img src="../imagenes/libro4.JPG" class="cajaImg caja--Pulses">
 							
                             No sólo son estructuras móviles y tridimensionales que se despliegan, 
                             sino que además deben cumplir la característica de replegarse sobre sí mismas al cerrar dichas páginas. 
@@ -87,7 +86,7 @@
 
  <div class="row justify-content-center">
 	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs">
-	  <div> <img src="../imagenes/caracteristica.PNG" alt="Características"></div>
+	  <div> <img src="../imagenes/caracteristica.png" alt="Características"></div>
 	  <h2>Características</h2>
 	  <p>Los mecanismos como los formatos y la relación con el usuario lector los hacen muy especiales</p>
 
@@ -119,8 +118,8 @@
 	</div>
 
 
-	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs">
-		<div><img src="../imagenes/tipologia.PNG" alt="Tipología"></div>
+	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs ">
+		<div><img src="../imagenes/tipologia.png" alt="Tipología"></div>
 
 	  <h2>Tipologías</h2>
 	  <p>El mundo pop-up lo conforman diferentes tipos de libros lo que lo hace muy diverso y variado.</p>
@@ -154,7 +153,7 @@
 
 
 	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs">
-		<div><img src="../imagenes/nomenclatura.PNG" alt="Nomenclatura"></div>
+		<div><img src="../imagenes/nomenclatura.png" alt="Nomenclatura"></div>
 	  <h2>Nomenclatura</h2>
 	  <p>A la hora de nombrarlos se hacen muy dificil ya es muy amplia la forma en que se denominan</p>
 	  <div class="accordion accordion-flush" id="accordionFlushExample">
