--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						  <li class="nav-item dropdown">
 							  <a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								  <li><a class="dropdown-item" href="paginas/historia.html #antes" >Antes del Pop-Up</a></li>
-								  <li><a class="dropdown-item" href="paginas/historia.html #despues">Después del Pop-Up</a></li>
+								  <li><a class="dropdown-item" href="paginas/historia.html#antes" >Antes del Pop-Up</a></li>
+								  <li><a class="dropdown-item" href="paginas/historia.html#despues">Después del Pop-Up</a></li>
 								 </ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="paginas/ingenieria.html">ingeniería</a></li>
@@ -45,10 +45,10 @@
 <div id="carouselExampleFade" class=" container carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
 	<div class="carousel-inner shadow  mb-5 bordeCarrousel ">
 	  <div class="carousel-item active ">
-		<img src="imagenes/imgen_home6.JPG" class="d-block w-100 " alt="...">
+		<img src="imagenes/imgen_home6.jpg" class="d-block w-100 " alt="...">
 	  </div>
 	  <div class="carousel-item">
-		<img src="imagenes/imgen_home3.JPG" class="d-block w-100" alt="...">
+		<img src="imagenes/imgen_home3.jpg" class="d-block w-100" alt="...">
 	  </div>
 	  <div class="carousel-item">
 		<img src="imagenes/imagen-home4.jpg" class="d-block w-100" alt="...">
@@ -89,7 +89,7 @@
 				</div>
 			
 				<div class=" row justify-content-center cajaTitular  caja--InUp col col-sm-12 col-md-10 col-xl-8 ">
-					<img src="imagenes/Gráfico1.JPG" class="cajaImg">
+					<img src="imagenes/grafico1.jpg" class="cajaImg">
 				</div>
 			</div>
 
