renombre de imagenes

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 <div id="carouselExampleFade" class=" container carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
 	<div class="carousel-inner shadow  mb-5 bordeCarrousel ">
 	  <div class="carousel-item active ">
-		<img src="imagenes/imgen_home6.jpg" class="d-block w-100 " alt="...">
+		<img src="imagenes/imgen_home6-.jpg" class="d-block w-100 " alt="...">
 	  </div>
 	  <div class="carousel-item">
-		<img src="imagenes/imgen_home3.jpg" class="d-block w-100" alt="...">
+		<img src="imagenes/imgen_home3-.jpg" class="d-block w-100" alt="...">
 	  </div>
 	  <div class="carousel-item">
-		<img src="imagenes/imagen-home4.jpg" class="d-block w-100" alt="...">
+		<img src="imagenes/imagen-home4-.jpg" class="d-block w-100" alt="...">
 	  </div>
 	</div>
 	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -88,7 +88,7 @@
 				</div>
 			
 				<div class=" row justify-content-center cajaTitular  caja--InUp col col-sm-12 col-md-10 col-xl-8 ">
-					<img src="imagenes/grafico1.jpg" class="cajaImg">
+					<img src="imagenes/grafico1-.jpg" class="cajaImg">
 				</div>
 			</div>
 
