--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -54,10 +54,10 @@
 		<div class="row justify-content-center  animaFin">
 			 <div class="col-12 col-xl-3">
 					<div class="cajaImgHistoria">
-					<img src="../imagenes/antes1.jpg" class="imgHistoria">
-					<img src="../imagenes/antes2.jpg" class="imgHistoria">
-					<img src="../imagenes/libro2.jpg" class="imgHistoria">
-					<img src="../imagenes/libro1.jpg" class="imgHistoria">
+					<img src="../imagenes/antes1-.jpg" class="imgHistoria">
+					<img src="../imagenes/antes2-.jpg" class="imgHistoria">
+					<img src="../imagenes/libro2-.jpg" class="imgHistoria">
+					<img src="../imagenes/libro1-.jpg" class="imgHistoria">
 					</div>
 			</div>
 
@@ -134,10 +134,10 @@
 					
 						<div class="col-12 col-xl-3">
 						 	<div class="cajaImgHistoria">
-								<img src="../imagenes/nene.jpg" class="imgHistoria">
-								<img src="../imagenes/despues1.jpg" class="imgHistoria">
-								<img src="../imagenes/despues2.jpg" class="imgHistoria">
-								<img src="../imagenes/tiptop.jpg" class="imgHistoria">
+								<img src="../imagenes/nene-.jpg" class="imgHistoria">
+								<img src="../imagenes/despues-1.jpg" class="imgHistoria">
+								<img src="../imagenes/despues-2.jpg" class="imgHistoria">
+								<img src="../imagenes/tiptop-.jpg" class="imgHistoria">
 							</div>
 						</div>
 					</div>
