--- a/paginas/que-es.html
+++ b/paginas/que-es.html
@@ -59,7 +59,7 @@
                             son realmente escuetas para definirlos. Estos ejemplares son mucho más que sus sistemas articulados, 
                             tienen la singularidad que al abrirse emergen de sus carillas distintos elementos. <br><br>
 
-								<img src="../imagenes/libro4.JPG" class="cajaImg caja--Pulses">
+								<img src="../imagenes/libro4-.jpg" class="cajaImg caja--Pulses">
 							
                             No sólo son estructuras móviles y tridimensionales que se despliegan, 
                             sino que además deben cumplir la característica de replegarse sobre sí mismas al cerrar dichas páginas. 
@@ -86,7 +86,7 @@
 
  <div class="row justify-content-center">
 	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs">
-	  <div> <img src="../imagenes/caracteristica.png" alt="Características"></div>
+	  <div> <img src="../imagenes/caracteristica-.png" alt="Características"></div>
 	  <h2>Características</h2>
 	  <p>Los mecanismos como los formatos y la relación con el usuario lector los hacen muy especiales</p>
 
@@ -119,7 +119,7 @@
 
 
 	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs ">
-		<div><img src="../imagenes/tipologia.png" alt="Tipología"></div>
+		<div><img src="../imagenes/tipologia-.png" alt="Tipología"></div>
 
 	  <h2>Tipologías</h2>
 	  <p>El mundo pop-up lo conforman diferentes tipos de libros lo que lo hace muy diverso y variado.</p>
@@ -153,7 +153,7 @@
 
 
 	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs">
-		<div><img src="../imagenes/nomenclatura.png" alt="Nomenclatura"></div>
+		<div><img src="../imagenes/nomenclatura-.png" alt="Nomenclatura"></div>
 	  <h2>Nomenclatura</h2>
 	  <p>A la hora de nombrarlos se hacen muy dificil ya es muy amplia la forma en que se denominan</p>
 	  <div class="accordion accordion-flush" id="accordionFlushExample">
