--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -135,8 +135,8 @@
 						<div class="col-12 col-xl-3">
 						 	<div class="cajaImgHistoria">
 								<img src="../imagenes/nene-.jpg" class="imgHistoria">
-								<img src="../imagenes/despues-1.jpg" class="imgHistoria">
-								<img src="../imagenes/despues-2.jpg" class="imgHistoria">
+								<img src="../imagenes/despues1-.jpg" class="imgHistoria">
+								<img src="../imagenes/despues2-.jpg" class="imgHistoria">
 								<img src="../imagenes/tiptop-.jpg" class="imgHistoria">
 							</div>
 						</div>
