--- a/paginas/produccion.html
+++ b/paginas/produccion.html
@@ -63,21 +63,21 @@
 					<div class="row justify-content-center">
 						<div class="col-12 col-md-4 col-lg-3">
 							<a href="#">
-								<div class="cajaVideo"><h3>Procesos</h3><img src="../imagenes/video1-.png" title="video sobre procesos del libro pop-up" alt="video procesos" class="cajaVideo__img">
+								<div class="cajaVideo"><h3>Procesos</h3><img src="../imagenes/video1.png" title="video sobre procesos del libro pop-up" alt="video procesos" class="cajaVideo__img">
 								</div>
 							</a>
 						</div>
 						
 					<div class="col-12 col-md-4 col-lg-3">
 						<a href="#">
-							<div class="cajaVideo"><h3>Guion y Diseño</h3><img src="../imagenes/video2-.png" title="video de un guion y diseño del libro pop-up" alt="video Guion y Diseño" class="cajaVideo__img">
+							<div class="cajaVideo"><h3>Guion y Diseño</h3><img src="../imagenes/video2.png" title="video de un guion y diseño del libro pop-up" alt="video Guion y Diseño" class="cajaVideo__img">
 							</div>
 						</a>
 					</div>
 
 					<div class="col-12 col-md-4 col-lg-3">
 						<a href="#">
-							<div class="cajaVideo"><h3>Fabricación</h3><img src="../imagenes/video3-.png" title="video fabricación del libro pop-up" alt="video fabricación" class="cajaVideo__img">
+							<div class="cajaVideo"><h3>Fabricación</h3><img src="../imagenes/video3.png" title="video fabricación del libro pop-up" alt="video fabricación" class="cajaVideo__img">
 							</div>
 						</a>
 					</div>
