https://orosanto.github.io/mi_repositorio/

--- a/paginas/ingenieria.html
+++ b/paginas/ingenieria.html
@@ -15,7 +15,7 @@
 <body>
 	<!-- header -->
 
-	<header class="container-fluid bg-light">
+	<header class="container-fluid sticky-top bg-light">
 		<nav class="container navbar navbar-expand-lg navbar-light bg-light">
 			<div class= "container-fluid">
 			  <a class="navbar-brand logo" href="../index.html"><img src="../imagenes/logo.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
@@ -125,7 +125,6 @@
 		  <div class="col col-sm-1 col-md-3 texContacto">
 		  <h2>Contacto</h2> 
 		  <p>contacto@mundopopup <br>
-			  Av. Acoyte 500 <br>
 			  Ciudad Autónoma de Buenos Aires <br>
 			  Argentina </p>
 		  </div>
