--- a/paginas/produccion.html
+++ b/paginas/produccion.html
@@ -13,7 +13,7 @@
 
 
 <body>
-	<header class="container-fluid bg-light">
+	<header class="container-fluid sticky-top bg-light">
 		<nav class="container navbar navbar-expand-lg navbar-light bg-light">
 			<div class= "container-fluid">
 			  <a class="navbar-brand logo" href="../index.html"><img src="../imagenes/logo.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
@@ -84,6 +84,21 @@
 				</div>
 			</div>
 
+
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
+						en un comienzo se fabricaban en los territorios donde se diseñaban, en Europa o en Estados Unidos.
+						<p>Para la producción de un libro pop-up, se llevan acabo varios paso que incluyen desde (2012)<span class="destacado">escritores, editores, diseñadores gráficos, ingenieros en papel, técnicos de impresión, personal de ensablado, distribuidores, entre otos.  </span> <br><br>
+						Esto de muestra que no es una tarea sensilla e involucra una cadena de personal especializado mas alla de los requerimientos de maquinaria y tecnología para su fabricación .</p>
+						</div>
+
+						<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
+							<h3>Pasos para la producción de un libro pop-up</h3>
+						<img src="../imagenes/proceso-.jpg" title="Procesos de producción libro pop-up" alt="Procesos de producción libro pop-up " class="cajaImg animaPulse zoom">
+					</div>
+				  </div>
+			</div>
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
@@ -93,7 +108,11 @@
 							A partir de 1940-1950 la producción se trasladó a los países que estaban en vías de desarrollo, como Italia, Japón y 
 							posteriormente comenzó su manofactura en América del Sur, en particular en Colombia. Veamos los procesos de producción y el mapa 
 							geopoliltico de la historia de estos libros.</p>
-							<img src="../imagenes/mapa-.png" title="Mapa gepolítico del libro pop-up" alt="Mapa gepolítico del libro pop-up " class="cajaImg animaPulse">
+							</div>
+
+							<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
+								<h3>Mapa geopolítico de la fabricación del los libros pop-up</h3>
+							<img src="../imagenes/mapa-.jpg" title="Mapa gepolítico del libro pop-up" alt="Mapa gepolítico del libro pop-up " class="cajaImg animaPulse zoom">
 						</div>
                       </div>
 				</div>
@@ -111,7 +130,6 @@
 				<div class="col col-sm-1 col-md-3 texContacto">
 				<h2>Contacto</h2> 
 				<p>contacto@mundopopup <br>
-					Av. Acoyte 500 <br>
 					Ciudad Autónoma de Buenos Aires <br>
 					Argentina </p>
 				</div>
