--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<header class="container-fluid bg-light">
+	<header class="container-fluid sticky-top bg-light">
 		<nav class="container navbar navbar-expand-lg navbar-light bg-light">
 			<div class= "container-fluid">
 			  <a class="navbar-brand logo caja--Flip " href="#"><img src="imagenes/logo.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
@@ -24,8 +24,7 @@
 				  <div class="collapse navbar-collapse nav1" id="navbarNav" >
 					<ul class="navbar-nav">
 						 <li class="nav-item"><a class="nav-link" href="paginas/que-es.html" >¿qué es?</a></li>
-						  <li class="nav-item dropdown">
-							  <a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
+						  <li class="nav-item dropdown"> <a class= "nav-link dropdown-toggle" href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false" href="paginas/historia.html">historia</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 								  <li><a class="dropdown-item" href="paginas/historia.html#antes" >Antes del Pop-Up</a></li>
 								  <li><a class="dropdown-item" href="paginas/historia.html#despues">Después del Pop-Up</a></li>
@@ -41,16 +40,17 @@
 	</header>
 
 
-<div id="carouselExampleFade" class=" container carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
-	<div class="carousel-inner shadow  mb-5 bordeCarrousel ">
+<div id="carouselExampleFade" class=" container carousel slide carousel-fade carousel-light" data-bs-ride="carousel">
+	<div class="carousel-inner shadow  bordeCarrousel ">
+		
 	  <div class="carousel-item active ">
-		<img src="imagenes/imgen_home6-.jpg" class="d-block w-100 " alt="...">
+		<img src="imagenes/imgen_home6-.jpg class="d-block w-100 " alt="detalle paginas libro Pop Ville">
+	</div>
+	  <div class="carousel-item">
+		<img src="imagenes/imagen-home2-.jpg" class="d-block w-100" alt="detalle libro Butterely Garden ">
 	  </div>
 	  <div class="carousel-item">
-		<img src="imagenes/imgen_home3-.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="imagenes/imagen-home4-.jpg" class="d-block w-100" alt="...">
+		<img src="imagenes/imagen-home5-.jpg" class="d-block w-100" alt="detalle libro pop-up Oz">
 	  </div>
 	</div>
 	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -68,28 +68,39 @@
 	<div class="container">
 			
 				<div class="row justify-content-center ">
-					  <div class="col col-sm-12 col-md-8 col-xl-7 cajaTitular caja--InUp ">
-						<h1>El lugar donde habitan los libros móviles...<h1>
+					  <div class="col col-sm-11 col-md-8 col-xl-7 cajaTitular caja--InUp ">
+						<h1>El lugar donde habitan los libros móviles...</h1>
 					  </div>
 				</div>
-	
-				<div class=" row justify-content-center cajaTitular caja--InUp col col-sm-12 col-md-10 col-xl-8 ">
-		    	<p>Podríamos arriesgarnos a decir que, de una u otra manera, 
-				la mayoría de los lectores alguna vez ha sostenido en sus manos  <span class="destacado">libro pop-up</span> , 
-				seguramente muchos no lo conozcan con esta denominación, pero es difícil que sus ojos no lo hayan registrado, 
-				con asombro o curiosidad, al ver mover sus páginas. <br><br>
 
-				Comencemos a desplegar algunas de las aristas que nos permitan entender por qué estos libros son y han sido parte 
-				del universo editorial a la sombra de los estantes de la academia. <br><br>
+				<div class=" row justify-content-center cajaTextIndex caja--InUp col col-sm-11 col-md-8 col-xl-6 ">
+		    		<p>Podríamos arriesgarnos a decir que, de una u otra manera, 
+					la mayoría de los lectores alguna vez ha sostenido en sus manos  <span class="destacado">libro pop-up</span> , 
+					seguramente muchos no lo conozcan con esta denominación, pero es difícil que sus ojos no lo hayan registrado, 
+					con asombro o curiosidad, al ver mover sus páginas. <br><br>
 
-				En este sitio abarca un breve recorrido, a traves de la historia, del fascinate mundo del libro desplegable, 
-				sus caracteristicas que hace de este objeto único, sus mecanismos principales que forma los pop-up, algunos 
-				de sus maravillosos credore y mucha mas información de estos soprendetes libros.
+					Comencemos a desplegar algunas de las aristas que nos permitan entender por qué estos libros son y han sido parte 
+					del universo editorial, a la sombra de los estantes de la academia, sean bienvenidos al Mundo Pop-Up </p>
 				</div>
 			
-				<div class=" row justify-content-center cajaTitular  caja--InUp col col-sm-12 col-md-10 col-xl-8 ">
-					<img src="imagenes/grafico1-.jpg" class="cajaImg">
+				<div class="container fondoVideo">		
+					<div class="row justify-content-center videoHome caja--InUp col col-sm-10 col-md-8 col-xl-6">
+					<video src="multimedia/Video.mp4" controls autoplay>
+						Tu navegador no implementa el elemento  <code>video</code>
+					</video>
 				</div>
+			</div>
+				
+				<div class=" row justify-content-center cajaTextIndex caja--InUp col col-sm-11 col-md-8 col-xl-6 ">
+					<p>En este sitio encontrarán un breve recorrido, a traves de la historia, del fascinate mundo del libro desplegable, 
+					sus características que hace de este objeto único, sus mecanismos principales que forma los pop-up, algunos 
+					de sus maravillosos credores y mucha mas información de estos sorprendentes libros.</p>
+				</div> 
+			
+				<div class=" row justify-content-center cajaTextIndex caja--InUp col col-sm-11 col-md-8 col-xl-6 ">
+					<img src="imagenes/libro-home.png">
+				</div>
+	 
 			</div>
 
 <!--Footer -->
@@ -100,7 +111,6 @@
 					<div class="col col-sm-1 col-md-3 texContacto">
 						<h2>Contacto</h2> 
 						<p>contacto@mundopopup <br>
-							Av. Acoyte 500 <br>
 							Ciudad Autónoma de Buenos Aires <br>
 							Argentina </p>
 					</div>
