--- a/paginas/que-es.html
+++ b/paginas/que-es.html
@@ -13,7 +13,7 @@
 
 
 <body>
-	<header class="container-fluid bg-light">
+	<header class="container-fluid sticky-top bg-light">
 		<nav class="container navbar navbar-expand-lg navbar-light bg-light">
 			<div class= "container-fluid">
 			  <a class="navbar-brand logo" href="../index.html"><img src="../imagenes/logo.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
@@ -46,10 +46,10 @@
 		<div class="container">
 			<div class="row justify-content-center">
 					<div class="col col-sm-12 col-md-8 col-xl-6 ">
-						<h1>¿Qué es el Pop-Up?<h1>
-					</div>
+						<h1>¿Qué es el Pop-Up?</h1>
+				</div>
 			</div>
-		
+
 			<div class="row justify-content-center">
 				<div class=" col col-sm-12 col-md-10 col-xl-8 caja--InUp">
                     <div class="texto1">
@@ -68,9 +68,112 @@
                             
                             Es el público quien acciona las piezas para generar los movimientos de lengüetas, pestañas, pliegues, 
                             solapas, ruedas, entre otros mecanismos, y provoca lo que Robert Sabuda denomina <span class="destacado">“efecto ¡Oh!”</span>, 
-                            la sorpresa que se sucede al transformarse el contenido de las páginas (Trebbi, 2012). 
-                            <br><br>
-                            Esta aparición es muchas veces repentina, lo que acentúa el factor sorpresa que según Helen Hiebrt (2015: 9) 
+                            la sorpresa que se sucede al transformarse el contenido de las páginas (Trebbi, 2012).</p>
+                     </div>
+				</div>		
+			</div>
+			
+ <!-- deplegables acordions -->
+ <div container>
+	<div class="row justify-content-center">
+	   <div class="col col-sm-10 col-md-7 col-lg-3 cajaQueEs">
+		 <div> <img src="../imagenes/caracteristica-.png" alt="Características"></div>
+		 <h2>Características</h2>
+		 <h5>Los mecanismos como los formatos y la relación con el usuario lector los hacen muy especiales</h5>
+   
+		 <div class="accordion accordion-flush" id="accordionFlushExample">
+		   <div class="accordion-item">
+			 <h2 class="accordion-header" id="flush-headingOne">
+			   <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+					 <h5>Ver características</h5>
+				 </button>
+			   </h2>
+	   <div id="flush-collapseOne" class="accordion-collapse collapse acordion1A" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+		 <div class="accordion-body">
+				   <ul class="lista2">
+					   <li>Cortes paralelos </li>
+					   <li>Corte en ángulo</li>
+					   <li>Pegado en ángulo</li>
+					   <li>Pestaña o solapa </li>
+					   <li>Lengüeta </li>
+					   <li>Rueda o disco giratorio</li>
+					   <li>Plegado y replegado</li>
+				   </ul>
+			   </div>
+			 </div>
+		   </div>
+		   </div>
+	   </div>
+   
+   
+	   <div class="col col-sm-10 col-md-7 col-lg-3 cajaQueEs ">
+		   <div><img src="../imagenes/tipologia-.png" alt="Tipología"></div>
+   
+		 <h2>Tipologías</h2>
+		 <h5>El mundo pop-up lo conforman diferentes tipos de libros, esto lo convierte en un objeto muy variado.</h5>
+		 
+		 <div class="accordion accordion-flush" id="accordionFlushExample">
+		   <div class="accordion-item ">
+			 <h2 class="accordion-header" id="headingTwo">
+			   <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+				   <h5>Ver tipologías</h5>
+				 </button>
+			   </h2>
+			   <div id="collapseTwo" class="accordion-collapse collapse acordion2A" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+				 <div class="accordion-body">
+				   <ul class="lista2">
+					   <li>Pop-up 90º </li>
+					   <li>Pop-up 180º</li>
+					   <li>Libro acordeón</li>
+					   <li>Libro bandera</li>
+					   <li>Libro carrusel o estrella</li>
+					   <li>Libro diorama</li>
+					   <li>Libro Pell-mell o 
+						   Mix and match</li>
+				   </ul>
+			   </div>
+			 </div>
+		   </div>
+		   </div>
+	   </div><!-- /.col-lg-3 -->
+   
+   
+	   <div class="col col-sm-10 col-md-7 col-lg-3 cajaQueEs">
+		   <div><img src="../imagenes/nomenclatura-.png" alt="Nomenclatura"></div>
+		 <h2>Nomenclaturas</h2>
+		 <h5>A la hora de nombrarlos se hacen muy dificil ya es muy amplia la forma en que se denominan</h5>
+		 <div class="accordion accordion-flush" id="accordionFlushExample">
+		   <div class="accordion-item">
+			   <h2 class="accordion-header" id="headingThree">
+				   <button class="accordion-button collapsed  bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+					<h5> Ver nomenclaturas</h5>
+				   </button>
+				 </h2>
+				 <div id="collapseThree" class="accordion-collapse collapse acordion3A" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+				   <div class="accordion-body">
+				   <ul class="lista2">
+					   <li>Libro troquelados </li>
+					   <li>Libro animado</li>
+					   <li>Libro desplegable</li>
+					   <li>Libro móvil</li>
+					   <li>Libro mecánico </li>
+					   <li>Libro articulado</li>
+					   <li>Libro objeto</li>
+					   <li>Libro sorpresa</li>
+					   <li>Libro juguete</li>
+					   <li>libro tridimensional</li>
+				   </ul>
+			   </div>
+			 </div>
+		   </div>
+		   </div>
+	   </div><!-- /.col-lg-3 -->
+	 </div><!-- /.row -->
+	 </div>
+	 <div class="row justify-content-center">
+		<div class=" col col-sm-12 col-md-10 col-xl-8 caja--InUp">
+			<div class="texto1">
+                           <p> Esta aparición es muchas veces repentina, lo que acentúa el factor sorpresa que según Helen Hiebrt (2015: 9) 
                             define como <span class="destacado" >“maravilloso, excitante… ¡mágico!”</span>,donde “adultos y niños se quedan encantados mientras miran 
                             como se despliega una escena”. Díaz agrega que: “deben tener una vitalidad física, una dimensión añadida 
                             a través de la cual se hace vivo en manos del lector”, convirtiendo a esta interacción en una de las características 
@@ -81,109 +184,7 @@
         </div>
 	</div>
 
- <!-- deplegables acordions -->
- <div container>
 
- <div class="row justify-content-center">
-	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs">
-	  <div> <img src="../imagenes/caracteristica-.png" alt="Características"></div>
-	  <h2>Características</h2>
-	  <p>Los mecanismos como los formatos y la relación con el usuario lector los hacen muy especiales</p>
-
-	  <div class="accordion accordion-flush" id="accordionFlushExample">
-		<div class="accordion-item">
-		  <h2 class="accordion-header" id="flush-headingOne">
-			<button class="accordion-button collapsed bg-secondary bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-  				Ver características
-			  </button>
-			</h2>
-    <div id="flush-collapseOne" class="accordion-collapse collapse acordion1A" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">
-				<ul class="lista2">
-                    <li>Libro troquelados </li>
-                    <li>Libro animado</li>
-                    <li>Libro desplegable</li>
-                    <li>Libro móvil</li>
-                    <li>Libro mecánico </li>
-                    <li>Libro articulado</li>
-                    <li>Libro objeto</li>
-                    <li>Libro sorpresa</li>
-                    <li>Libro juguete</li>
-                	<li>libro tridimensional</li>
-            	</ul>
-			</div>
-		  </div>
-		</div>
-		</div>
-	</div>
-
-
-	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs ">
-		<div><img src="../imagenes/tipologia-.png" alt="Tipología"></div>
-
-	  <h2>Tipologías</h2>
-	  <p>El mundo pop-up lo conforman diferentes tipos de libros lo que lo hace muy diverso y variado.</p>
-	  
-	  <div class="accordion accordion-flush" id="accordionFlushExample">
-		<div class="accordion-item ">
-		  <h2 class="accordion-header" id="headingTwo">
-			<button class="accordion-button collapsed bg-secondary bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-				Ver tipologías
-			  </button>
-			</h2>
-			<div id="collapseTwo" class="accordion-collapse collapse acordion2A" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-			  <div class="accordion-body">
-				<ul class="lista2">
-                    <li>Libro troquelados </li>
-                    <li>Libro animado</li>
-                    <li>Libro desplegable</li>
-                    <li>Libro móvil</li>
-                    <li>Libro mecánico </li>
-                    <li>Libro articulado</li>
-                    <li>Libro objeto</li>
-                    <li>Libro sorpresa</li>
-                    <li>Libro juguete</li>
-                	<li>libro tridimensional</li>
-            	</ul>
-			</div>
-		  </div>
-		</div>
-		</div>
-	</div><!-- /.col-lg-3 -->
-
-
-	<div class="col col-sm-12 col-md-6 col-lg-2 cajaQueEs">
-		<div><img src="../imagenes/nomenclatura-.png" alt="Nomenclatura"></div>
-	  <h2>Nomenclatura</h2>
-	  <p>A la hora de nombrarlos se hacen muy dificil ya es muy amplia la forma en que se denominan</p>
-	  <div class="accordion accordion-flush" id="accordionFlushExample">
-		<div class="accordion-item">
-			<h2 class="accordion-header" id="headingThree">
-				<button class="accordion-button collapsed bg-secondary bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-				  Ver nomenclaturas
-				</button>
-			  </h2>
-			  <div id="collapseThree" class="accordion-collapse collapse acordion3A" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-				<div class="accordion-body">
-				<ul class="lista2">
-                    <li>Libro troquelados </li>
-                    <li>Libro animado</li>
-                    <li>Libro desplegable</li>
-                    <li>Libro móvil</li>
-                    <li>Libro mecánico </li>
-                    <li>Libro articulado</li>
-                    <li>Libro objeto</li>
-                    <li>Libro sorpresa</li>
-                    <li>Libro juguete</li>
-                	<li>libro tridimensional</li>
-            	</ul>
-			</div>
-		  </div>
-		</div>
-		</div>
-	</div><!-- /.col-lg-3 -->
-  </div><!-- /.row -->
-  </div>
 
 </div>
 </div>
@@ -197,7 +198,6 @@
 				<div class="col col-sm-1 col-md-3 texContacto">
 				<h2>Contacto</h2> 
 				<p>contacto@mundopopup <br>
-					Av. Acoyte 500 <br>
 					Ciudad Autónoma de Buenos Aires <br>
 					Argentina </p>
 				</div>
