--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<header class="container-fluid sticky-top bg-light">
 		<nav class="container navbar navbar-expand-lg navbar-light bg-light">
 			<div class= "container-fluid">
-			  <a class="navbar-brand logo caja--Flip " href="#"><img src="imagenes/logo.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
+			  <a class="navbar-brand logo caja--Flip " href="#"><img src="imagenes/logo-.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
@@ -44,7 +44,7 @@
 	<div class="carousel-inner shadow  bordeCarrousel ">
 		
 	  <div class="carousel-item active ">
-		<img src="imagenes/imgen_home6-.jpg class="d-block w-100 " alt="detalle paginas libro Pop Ville">
+		<img src="imagenes/imgen_home6.jpg class="d-block w-100 " alt="detalle paginas libro Pop Ville">
 	</div>
 	  <div class="carousel-item">
 		<img src="imagenes/imagen-home2-.jpg" class="d-block w-100" alt="detalle libro Butterely Garden ">
