--- a/paginas/informacion.html
+++ b/paginas/informacion.html
@@ -18,7 +18,7 @@
 	<header class="container-fluid sticky-top bg-light">
 		<nav class="container navbar navbar-expand-lg navbar-light bg-light">
 			<div class= "container-fluid">
-			  <a class="navbar-brand logo" href="../index.html"><img src="../imagenes/logo.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
+			  <a class="navbar-brand logo" href="../index.html"><img src="../imagenes/logo-.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
@@ -122,7 +122,7 @@
 <!-- modulo 5-->
 				<div class="col-12 col-sm-5 col-xl-3 columnaInfo">
 					<h3>Para aprender en casa:</h3>
-            		<img src="../imagenes/tapa-elementos-.png" class="imgInfo" alt="tapa libro: Elementos del Pop-Up" title="libro Elementos del Pop-Up">
+            		<img src="../imagenes/tapa-elementos.png" class="imgInfo" alt="tapa libro: Elementos del Pop-Up" title="libro Elementos del Pop-Up">
             		<p> <span class="destacado" >Los elementos del pop-upPor </span> </p><br>
             		<ul class="lista2">
                 		<li>Carter, David</li>
