--- a/paginas/ingenieria.html
+++ b/paginas/ingenieria.html
@@ -18,7 +18,7 @@
 	<header class="container-fluid sticky-top bg-light">
 		<nav class="container navbar navbar-expand-lg navbar-light bg-light">
 			<div class= "container-fluid">
-			  <a class="navbar-brand logo" href="../index.html"><img src="../imagenes/logo.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
+			  <a class="navbar-brand logo" href="../index.html"><img src="../imagenes/logo-.png" alt="logo Mundo PopUp" title="Mundo PopUp" class="logo"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
