https://orosanto.github.io/mi_repositorio/

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="carousel-inner shadow  bordeCarrousel ">
 		
 	  <div class="carousel-item active ">
-		<img src="imagenes/imgen_home1.jpg class="d-block w-100 " alt="detalle paginas libro Pop Ville">
+		<img src="imagenes/imagen_home1.jpg" class="d-block w-100 " alt="detalle paginas libro Pop Ville">
 	</div>
 	  <div class="carousel-item">
 		<img src="imagenes/imagen-home2-.jpg" class="d-block w-100" alt="detalle libro Butterely Garden ">
