https://orosanto.github.io/mi_repositorio/

--- a/paginas/produccion.html
+++ b/paginas/produccion.html
@@ -92,7 +92,7 @@
 						<p>Para la producción de un libro pop-up, se llevan acabo varios paso que incluyen desde (2012)<span class="destacado">escritores, editores, diseñadores gráficos, ingenieros en papel, técnicos de impresión, personal de ensablado, distribuidores, entre otos.  </span> <br><br>
 						Esto de muestra que no es una tarea sensilla e involucra una cadena de personal especializado mas alla de los requerimientos de maquinaria y tecnología para su fabricación .</p>
 						</div>
-
+						<div class="row justify-content-center">
 						<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
 							<h3>Pasos para la producción de un libro pop-up</h3>
 						<img src="../imagenes/proceso-.jpg" title="Procesos de producción libro pop-up" alt="Procesos de producción libro pop-up " class="cajaImg animaPulse zoom">
@@ -109,10 +109,11 @@
 							posteriormente comenzó su manofactura en América del Sur, en particular en Colombia. Veamos los procesos de producción y el mapa 
 							geopoliltico de la historia de estos libros.</p>
 							</div>
-
+							<div class="row justify-content-center">
 							<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
 								<h3>Mapa geopolítico de la fabricación del los libros pop-up</h3>
 							<img src="../imagenes/mapa-.jpg" title="Mapa gepolítico del libro pop-up" alt="Mapa gepolítico del libro pop-up " class="cajaImg animaPulse zoom">
+						</div>
 						</div>
                       </div>
 				</div>
