https://orosanto.github.io/mi_repositorio/

--- a/paginas/ingenieria.html
+++ b/paginas/ingenieria.html
@@ -24,13 +24,12 @@
 			  </button>
 				  <div class="collapse navbar-collapse nav1" id="navbarNav" >
 					<ul class="navbar-nav">
-						 <li class="nav-item"><a class="nav-link" href="../paginas/que-es.html" >¿qué es?</a></li>
-						  <li class="nav-item dropdown">
-							  <a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
-								<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								  <li><a class="dropdown-item" href="../paginas/historia.html#antes">Antes del Pop-Up</a></li>
-								  <li><a class="dropdown-item" href="../paginas/historia.html#despuesS">Después del Pop-Up</a></li>
-								 </ul>
+						<li class="nav-item"><a class="nav-link" href="../paginas/que-es.html" >¿qué es?</a></li>
+						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="../paginas/historia.html#antes">Antes del Pop-Up</a></li>
+								<li><a class="dropdown-item" href="../paginas/historia.html#despuesS">Después del Pop-Up</a></li>
+							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="../paginas/ingenieria.html">ingeniería</a></li>
 						<li class="nav-item"><a class="nav-link" href="../paginas/produccion.html">producción</a></li>
@@ -49,14 +48,11 @@
 				<h1>Ingeniería para sorprender</h1>
 			</div>
 		</div>
-
 	
 		<div class="container">
 			<div class="row justify-content-center">								   
 				<div class="col-12  col-xl-3">
-				
-					<h3>¿Qué es la Ingeniería en Papel?</h3>
-
+				<h3>¿Qué es la Ingeniería en Papel?</h3>
    				 <p> Antes de comenzar a hablar de las técnicas de la ingeniería en papel, repasemos brevemente a quien se lo denomina ingeniero en papel. 
         			Según David Carter y James Diaz (2009:1) “es una artista que crea pop-up utilizando el papel como medio principal”, 
        				mientras que para Helen Heibert (2015:14) “es alguien que diseña libros desplegables o móviles”,pero agrega que también realiza 
@@ -87,9 +83,7 @@
 					</div>
 
 				<div class="col-12  col-xl-3">
-				
 				<h3>Estrellas del Pop-up</h3>
-
 					<p>Fue a principios de siglo XXI que los libros pop-up se reafirmaron en el mundo editorial, con el surgimiento de nuevos ingenieros, 
 						diseñadores y artistas, como los estadounidenses <br> <br> <span class="destacado">David Carter, Robert Sabuda, Matthew Reinhart; los franceses Philippe Huger, 
 						Marion Bataille, Anouk Boisrobert y Louis Rigaud; o las españolas Ángels Navarro y Patricia Geis</span>. <br> <br>
@@ -110,9 +104,7 @@
 						Esto tampoco nos permite decir o garantizar que todos los trabajos son maravillosos, ya que “cada vez y más a menudo 
 						la producción es tan espectacular como de mal gusto” (Trebbi, 2012). </p>
 				</div>
-
 			</div>
-
 		</div>
 </div>
 <!-- fin de contenido -->
