--- a/paginas/que-es.html
+++ b/paginas/que-es.html
@@ -45,8 +45,8 @@
 		
 		<div class="container">
 			<div class="row justify-content-center">
-					<div class="col col-sm-12 col-md-8 col-xl-6 ">
-						<h1>¿Qué es el Pop-Up?</h1>
+				<div class="col col-sm-12 col-md-8 col-xl-6 ">
+					<h1>¿Qué es el Pop-Up?</h1>
 				</div>
 			</div>
 
@@ -68,7 +68,8 @@
                             
                             Es el público quien acciona las piezas para generar los movimientos de lengüetas, pestañas, pliegues, 
                             solapas, ruedas, entre otros mecanismos, y provoca lo que Robert Sabuda denomina <span class="destacado">“efecto ¡Oh!”</span>, 
-                            la sorpresa que se sucede al transformarse el contenido de las páginas (Trebbi, 2012).</p>
+                            la sorpresa que se sucede al transformarse el contenido de las páginas (Trebbi, 2012).
+						</p>
                      </div>
 				</div>		
 			</div>
@@ -86,8 +87,8 @@
 			 <h2 class="accordion-header" id="flush-headingOne">
 			   <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
 					 <h5>Ver características</h5>
-				 </button>
-			   </h2>
+				</button>
+			</h2>
 	   <div id="flush-collapseOne" class="accordion-collapse collapse acordion1A" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
 		 <div class="accordion-body">
 				   <ul class="lista2">
@@ -102,8 +103,8 @@
 			   </div>
 			 </div>
 		   </div>
-		   </div>
-	   </div>
+		</div>
+	</div>
    
    
 	   <div class="col col-sm-10 col-md-7 col-lg-3 cajaQueEs ">
@@ -115,12 +116,12 @@
 		 <div class="accordion accordion-flush" id="accordionFlushExample">
 		   <div class="accordion-item ">
 			 <h2 class="accordion-header" id="headingTwo">
-			   <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+			    <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 				   <h5>Ver tipologías</h5>
 				 </button>
-			   </h2>
-			   <div id="collapseTwo" class="accordion-collapse collapse acordion2A" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-				 <div class="accordion-body">
+			 </h2>
+			<div id="collapseTwo" class="accordion-collapse collapse acordion2A" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
 				   <ul class="lista2">
 					   <li>Pop-up 90º </li>
 					   <li>Pop-up 180º</li>
@@ -128,29 +129,28 @@
 					   <li>Libro bandera</li>
 					   <li>Libro carrusel o estrella</li>
 					   <li>Libro diorama</li>
-					   <li>Libro Pell-mell o 
-						   Mix and match</li>
+					   <li>Libro Pell-mell o Mix and match</li>
 				   </ul>
 			   </div>
 			 </div>
 		   </div>
-		   </div>
-	   </div><!-- /.col-lg-3 -->
+		</div>
+	</div><!-- /.col-lg-3 -->
    
    
-	   <div class="col col-sm-10 col-md-7 col-lg-3 cajaQueEs">
+	<div class="col col-sm-10 col-md-7 col-lg-3 cajaQueEs">
 		   <div><img src="../imagenes/nomenclatura-.png" alt="Nomenclatura"></div>
 		 <h2>Nomenclaturas</h2>
-		 <h5>A la hora de nombrarlos se hacen muy dificil ya es muy amplia la forma en que se denominan</h5>
+		   <h5>A la hora de nombrarlos se hacen muy dificil ya es muy amplia la forma en que se denominan</h5>
 		 <div class="accordion accordion-flush" id="accordionFlushExample">
 		   <div class="accordion-item">
 			   <h2 class="accordion-header" id="headingThree">
 				   <button class="accordion-button collapsed  bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 					<h5> Ver nomenclaturas</h5>
 				   </button>
-				 </h2>
-				 <div id="collapseThree" class="accordion-collapse collapse acordion3A" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-				   <div class="accordion-body">
+				</h2>
+			<div id="collapseThree" class="accordion-collapse collapse acordion3A" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
 				   <ul class="lista2">
 					   <li>Libro troquelados </li>
 					   <li>Libro animado</li>
@@ -166,26 +166,26 @@
 			   </div>
 			 </div>
 		   </div>
-		   </div>
+		</div>
 	   </div><!-- /.col-lg-3 -->
 	 </div><!-- /.row -->
 	 </div>
-	 <div class="row justify-content-center">
-		<div class=" col col-sm-12 col-md-10 col-xl-8 caja--InUp">
-			<div class="texto1">
-                           <p> Esta aparición es muchas veces repentina, lo que acentúa el factor sorpresa que según Helen Hiebrt (2015: 9) 
-                            define como <span class="destacado" >“maravilloso, excitante… ¡mágico!”</span>,donde “adultos y niños se quedan encantados mientras miran 
-                            como se despliega una escena”. Díaz agrega que: “deben tener una vitalidad física, una dimensión añadida 
-                            a través de la cual se hace vivo en manos del lector”, convirtiendo a esta interacción en una de las características 
-                            principales de esta tipología de códices</p>
-                    </div>
-				</div>
+	  	<div class="row justify-content-center">
+			<div class=" col col-sm-12 col-md-10 col-xl-8 caja--InUp">
+				<div class="texto1">
+                    <p> Esta aparición es muchas veces repentina, lo que acentúa el factor sorpresa que según 
+						Helen Hiebrt (2015: 9) define como <span class="destacado" >“maravilloso, excitante… 
+						¡mágico!”</span>,donde “adultos y niños se quedan encantados mientras miran 
+                        como se despliega una escena”. Díaz agrega que: “deben tener una vitalidad física, 
+						una dimensión añadida a través de la cual se hace vivo en manos del lector”, 
+						convirtiendo a esta interacción en una de las características 
+                        principales de esta tipología de códices
+					</p>
+                 </div>
 			</div>
-        </div>
-	</div>
-
-
-
+		</div>
+    </div>
+</div>
 </div>
 </div>
 
