--- a/paginas/informacion.html
+++ b/paginas/informacion.html
@@ -24,13 +24,14 @@
 			  </button>
 				  <div class="collapse navbar-collapse nav1" id="navbarNav" >
 					<ul class="navbar-nav">
-						 <li class="nav-item"><a class="nav-link" href="../paginas/que-es.html" >¿qué es?</a></li>
-						  <li class="nav-item dropdown">
-							  <a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
-								<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								  <li><a class="dropdown-item" href="../paginas/historia.html#antes">Antes del Pop-Up</a></li>
-								  <li><a class="dropdown-item" href="../paginas/historia.html#despues">Después del Pop-Up</a></li>
-								 </ul>
+						<li class="nav-item"><a class="nav-link" href="../paginas/que-es.html" >¿qué es?</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle"  href="paginas/historia.html" id="navbarDropdownMenuLin"  role="button" data-bs-toggle="dropdown" aria-expanded="false">historia</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="../paginas/historia.html#antes">Antes del Pop-Up</a></li>
+								<li><a class="dropdown-item" href="../paginas/historia.html#despues">Después del Pop-Up</a></li>
+							</ul>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="../paginas/ingenieria.html">ingeniería</a></li>
 						<li class="nav-item"><a class="nav-link" href="../paginas/produccion.html">producción</a></li>
@@ -49,7 +50,6 @@
 				<h1>Información curiosa</h1>
 			</div>
 		</div>
-
 	 
 <!-- modulo 1-->
 		<div class="container">
@@ -57,11 +57,11 @@
 				<div class="col-12 col-sm-5 col-xl-3 columnaInfo">
 					<h3>Charlas, cursos y Talleres</h3>
 					 <img src="../imagenes/taller-.jpg" class="imgInfo" alt="imagen sobre Taller de pop-up" title="Taller de pop-up">
-            		<p> <span class="destacado" >Taller de pop-up ¡Creá tu propia sala de exhibiciones!</span> <br><br>
-            		DOM | 07/07 | 15 a 18 h | Hall central  <br><br>
-            		Te invitamos a armar escenarios con la técnica del pop-up, que consiste en realizar libros o imágenes tridimensionales, 
-                	en los que podrás crear tu propia sala de exposiciones, con las obras que vos imagines. ¡No te lo pierdas! 	<br><br>
-           			 Gratis | Hall Central, Usina del Arte (Caffarena 1, esq. Pedro de Mendoza) </p>
+            			<p> <span class="destacado" >Taller de pop-up ¡Creá tu propia sala de exhibiciones!</span> <br><br>
+            			DOM | 07/07 | 15 a 18 h | Hall central  <br><br>
+            			Te invitamos a armar escenarios con la técnica del pop-up, que consiste en realizar libros o imágenes tridimensionales, 
+                		en los que podrás crear tu propia sala de exposiciones, con las obras que vos imagines. ¡No te lo pierdas! 	<br><br>
+           			 	Gratis | Hall Central, Usina del Arte (Caffarena 1, esq. Pedro de Mendoza) </p>
 				</div>
 
 <!-- modulo 2-->
@@ -78,13 +78,13 @@
                 		<li>Año: 2017</li>
             		</ul>
            			 <br>
-            		<p>La diseñadora neoyorquina Kelli Anderson acaba de lanzar un libro "pop-up" 
-                	que funciona como un sinnúmero de artefactos, incluyendo un planetario, 
-                	un instrumento musical y un altavoz para celular.
-                	Kelli Anderson, la creadora del libro "This book is a planetarium", 
-                	está muy interesada en conocer la manera en que funcionan las cosas y 
-                	el proceso creativo. Esto la ha llevado a experimentar con diversos materiales,
-                	 especialmente el papel.</p>
+            			<p>La diseñadora neoyorquina Kelli Anderson acaba de lanzar un libro "pop-up" 
+                		que funciona como un sinnúmero de artefactos, incluyendo un planetario, 
+                		un instrumento musical y un altavoz para celular.
+                		Kelli Anderson, la creadora del libro "This book is a planetarium", 
+                		está muy interesada en conocer la manera en que funcionan las cosas y 
+                		el proceso creativo. Esto la ha llevado a experimentar con diversos materiales,
+                	 	especialmente el papel.</p>
 				</div>
 
 <!-- modulo 3-->
@@ -163,8 +163,8 @@
 	<footer class="container">
 	  <div class="row justify-content-between align-items-center">
 		  <div class="col col-sm-1 col-md-3 texContacto">
-		  <h2>Contacto</h2> 
-		  <p>contacto@mundopopup <br>
+		  	<h2>Contacto</h2> 
+		 	 <p>contacto@mundopopup <br>
 			  Ciudad Autónoma de Buenos Aires <br>
 			  Argentina </p>
 		  </div>
@@ -181,7 +181,6 @@
 						  <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
 						</svg></a></li>
 				  </ul>
-			  
 		  </div>
 	  </div>
   </footer>
