https://orosanto.github.io/mi_repositorio/

--- a/paginas/produccion.html
+++ b/paginas/produccion.html
@@ -61,23 +61,24 @@
 
 				<div class="container">
 					<div class="row justify-content-center">
-						<div class="col-12 col-md-4 col-lg-3">
-							<a href="#">
-								<div class="cajaVideo"><h3>Procesos</h3><img src="../imagenes/video1.png" title="video sobre procesos del libro pop-up" alt="video procesos" class="cajaVideo__img">
+						<div class="col-12 col-lg-3">
+							<a href="https://youtu.be/D1HxsghbWGc" target="_blank">
+								<div class="cajaVideo"><h3>Procesos ► </h3><img src="../imagenes/video1.png" title="video sobre procesos del libro pop-up" alt="video procesos" class="cajaVideo__img">
 								</div>
 							</a>
 						</div>
 						
-					<div class="col-12 col-md-4 col-lg-3">
-						<a href="#">
-							<div class="cajaVideo"><h3>Guion y Diseño</h3><img src="../imagenes/video2.png" title="video de un guion y diseño del libro pop-up" alt="video Guion y Diseño" class="cajaVideo__img">
+					<div class="col-12 col-lg-3">
+						<a href="https://youtu.be/SshvXElEJCI?t=5" target="_blank">
+							<div class="cajaVideo"><h3>Guion y Diseño ► </h3><img src="../imagenes/video2.png" title="video de un guion y diseño del libro pop-up" alt="video Guion y Diseño" class="cajaVideo__img">
 							</div>
 						</a>
 					</div>
 
-					<div class="col-12 col-md-4 col-lg-3">
-						<a href="#">
-							<div class="cajaVideo"><h3>Fabricación</h3><img src="../imagenes/video3.png" title="video fabricación del libro pop-up" alt="video fabricación" class="cajaVideo__img">
+					<div class="col-12 col-lg-3">
+						<a href="https://youtu.be/0amadC3qWHM?t=26" target="_blank">
+							<div class="cajaVideo"><h3>Fabricación ►</h3>
+								<img src="../imagenes/video3.png" title="video fabricación del libro pop-up" alt="video fabricación" class="cajaVideo__img">
 							</div>
 						</a>
 					</div>
@@ -86,7 +87,7 @@
 
 
 			<div class="container">
-				<div class="row justify-content-center">
+				<div class="row justify-content-center cajaTexProduccion">
 					<div class=" col col-sm-12 col-md-10 col-xl-8 animaFin">
 						en un comienzo se fabricaban en los territorios donde se diseñaban, en Europa o en Estados Unidos.
 						<p>Para la producción de un libro pop-up, se llevan acabo varios paso que incluyen desde (2012)<span class="destacado">escritores, editores, diseñadores gráficos, ingenieros en papel, técnicos de impresión, personal de ensablado, distribuidores, entre otos.  </span> <br><br>
